fix color change for dark mode in regenerate-btn

--- a/src/app/prompt-table/prompt-table.component.scss
+++ b/src/app/prompt-table/prompt-table.component.scss
@@ -109,7 +109,7 @@
         &:active {
           &::after {
             @include btn-after-active-expander;
-            background-color: #eae7e78b;
+            background-color: #eae7e746;
           }
         }
       }
