--- a/src/app/styles/abstracts/mixins.scss
+++ b/src/app/styles/abstracts/mixins.scss
@@ -2,14 +2,15 @@
 @mixin btn-after-expander {
   content: "";
   display: inline-block;
-  height: 100%;
-  width: 100%;
+  height: 120%;
+  width: 120%;
   position: absolute;
   bottom: 0;
   left: 0;
   top: 0;
   z-index: -99;
-  transition: transform linear 0.25s, opacity ease-out 0.1s;
+  opacity: 0.5;
+  transition: transform linear 0.5s, opacity ease-out 0.5s;
 }
 @mixin btn-after-active-expander {
   transform: scale(5);
